# symm

./: .gitignore  .mise.toml  Cargo.toml  README.md  build.rs  mise.toml  symm-manifest.rc  symm.json  symm.manifest
.github/actions/apply-cargo-version/: action.yml
.github/actions/fetch-gui-font/: action.yml
.github/actions/package-portable/: action.yml
.github/actions/package-windows/: action.yml
.github/actions/prepare-release-notes/: action.yml
.github/actions/resolve-release-version/: action.yml
.github/actions/sync-scoop-manifest/: action.yml
.github/actions/verify-ci-passed/: action.yml
.github/workflows/: baseline-trend.yml  ci.yml  cleanup-test-releases.yml  perf-baseline.yml  release-test.yml  release.yml  rollback-metrics.yml
assets/fonts/: README.md
docs/superpowers/plans/: 2026-04-24-symm-cli-implementation.md
docs/superpowers/specs/: 2026-04-24-symm-cli-design.md
packaging/windows/: build-installer.ps1  symm-setup.iss
scripts/: baseline-trend.py  fetch-gui-font.sh  perf-baseline.ps1  rollback-metrics.sh
src/: acl.rs  admin.rs  adopt.rs  cli.rs  db.rs  error.rs  lib.rs  link_ops.rs  main.rs  migration.rs  model.rs  output.rs  paths.rs  processes.rs  service.rs
src/adapters/: mod.rs  settings.rs
src/adapters/db/: link_query.rs  mod.rs  pick_list.rs  repository.rs  resolve.rs  schema.rs  selector.rs
src/adapters/errors/: io.rs  io_map.rs
src/adapters/fs/: acl.rs  copy_with_progress.rs  link.rs  link_creator.rs  link_status.rs  link_windows.rs  migration_service.rs  mod.rs  path_ops.rs  rebase.rs  tree_copy.rs
src/adapters/lock/: elevated.rs  elevated_progress.rs  messages.rs  mod.rs  privileged.rs  release.rs  snapshot.rs  test_hooks.rs
src/adapters/migrate/: copy.rs  copy_dir.rs  copy_file.rs  mod.rs  path.rs  rebase.rs  relocate.rs  relocate_symlink.rs  service.rs  tree_copy.rs
src/adapters/paths/: home.rs  mod.rs  normalize.rs  path_ops.rs  rebase_paths.rs  remove.rs  runtime_paths.rs
src/adapters/platform/: elevate.rs  mod.rs  privilege.rs
src/adapters/processes/: mod.rs  process_killer.rs
src/adapters/status/: mod.rs  probe.rs
src/adapters/symlink/: create.rs  link.rs  mod.rs  unlink.rs  windows.rs
src/app/: dispatch.rs  service.rs
src/app/commands/: add.rs  ls.rs  rm.rs  show.rs
src/domain/: error.rs  gui_settings.rs  mod.rs  model.rs
src/gui/: app.rs  data.rs  env.rs  fonts.rs  i18n.rs  icon.rs  icons.rs  mod.rs  settings_store.rs  state.rs  theme.rs  util.rs
src/gui/panels/: add.rs  content.rs  dashboard.rs  detail.rs  footer.rs  list.rs  mod.rs  rm_dialog.rs  settings.rs  settings_dialog.rs  sidebar.rs  top_bar.rs
src/gui/theme/: mod.rs  palette.rs  typography.rs
src/infra/: mod.rs
src/interface/: mod.rs
src/ui/: cli.rs  output.rs
src/workflows/: list_views.rs  mod.rs  perf.rs  select.rs
tests/: cli_flow.rs
(+67 files in other folders)
