[package]
name = "symm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
gui = ["dep:eframe", "dep:egui", "dep:image", "dep:dark-light", "dep:rfd"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.30", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
egui = { version = "0.30", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
dark-light = { version = "2", optional = true }
rfd = { version = "0.15", optional = true }
dirs = "5"
fs_extra = "1.3"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
inquire = "0.7"
runas = "1.2"
dunce = "1"
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[build-dependencies]
embed-resource = "3.0"

[[bin]]
name = "symm-cli"
path = "src/bin/symm-cli.rs"

[[bin]]
name = "symm"
path = "src/bin/symm.rs"
required-features = ["gui"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
